teacher homepage done

--- a/Synergetic Lite/adminHomepage.html
+++ b/Synergetic Lite/adminHomepage.html
@@ -29,7 +29,8 @@ By Nick Patrikeos on 14DEC17
             <a href='classesManage.py'><div id='classesBTN'><h3>Manage Classes</h3></div></a>
             <a href='coursesManage.py'><div id='coursesBTN'><h3>Manage Courses</h3></div></a>
         </div>
-        <a href="index.html"><div class="backButton">Logout</div></a>
+        <a href="index.html"><div class="backButton">Logout</div></a><br>
+        <div class="backButton" onclick="redirectToTeacherHomepage()">Go To Teacher Homepage</div>
         <hr>
         <footer>
             Synergetic 1.0.0 <br>Created By Nick Patrikeos
